# zc

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_IMPLEMENTATION_PLAN.md  ENTERPRISE_SUMMARY.md  FULL_INSTALL_TEST_REPORT.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  QUICKSTART.md  README.md  REBRAND_COMPLETE.md  ROADMAP.md  SECURITY.md  ai-coder.spec  artifacts.py  build.bat  build.sh  claude_admin_api.py  claude_advisor.py  claude_agents_sdk.py  claude_batch.py  claude_cache.py  claude_chrome.py  claude_citations.py  claude_code.py  (+125 more)
.cache/cloudflare-permissions/: account-token-permission-groups.9afd03fff02846b4ca89caeff350ce56.json
.claude/: ecc-tools.json  identity.json
.cloudflare-backups/: tokens.20260720T232527Z.json
.codex/: AGENTS.md  config.toml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  release.yml  security.yml
.web-venv/: pyvenv.cfg
.zc/agents/: AGENTS.md  accepted-session-spawn.ts  acp-spawn-parent-stream.test.ts  acp-spawn-parent-stream.ts  acp-spawn.test.ts  acp-spawn.ts  agent-auth-credentials.ts  agent-auth-discovery-core.ts  agent-auth-discovery.external-cli.test.ts  agent-auth-discovery.ts  agent-bundle-lsp-runtime.test.ts  agent-bundle-lsp-runtime.ts  agent-bundle-lsp-runtime.windows-spawn.test.ts  agent-bundle-mcp-materialize.ts  agent-bundle-mcp-names.test.ts  agent-bundle-mcp-names.ts  agent-bundle-mcp-runtime.test.ts  agent-bundle-mcp-runtime.ts  agent-bundle-mcp-tools.materialize.test.ts  agent-bundle-mcp-tools.request-boundary.test.ts  agent-bundle-mcp-types.ts  agent-command.compaction-rotation.test.ts  agent-command.ingress-diagnostics.test.ts  agent-command.live-model-switch.test.ts  agent-command.ts  agent-delete-safety.ts  agent-dir-registry.ts  agent-mcp-style.cache.live.test.ts  agent-model-discovery.auth.test.ts  agent-model-discovery.synthetic-auth.test.ts  (+754 more)
app/: __init__.py  cli.py  local.py  main.py  requirements.txt
argocd/: wire-app.yaml  wire-project.yaml
config/: kernel_tuning.conf
docs/: 17_projects_and_artifacts.md  18_deep_scan_and_fable5.md  20_upgrade_v1.10.2.md  21_upgrade_v1.10.3.md  22_upgrade_v1.10.4.md  23_upgrade_v1.10.5.md  24_upgrade_v1.11.0.md  25_merge_v2_into_release.md  26_upgrade_v1.12.1.md  27_upgrade_v1.13.0.md  28_upgrade_v1.14.0.md  29_upgrade_v1.15.0.md  30_upgrade_v1.16.0.md  31_upgrade_v1.18.0.md  32_upgrade_v1.19.0.md  33_upgrade_v1.20.0.md  35_upgrade_v1.23.0_audit_and_impl.md  36_upgrade_v1.24.0_audit_and_impl.md  37_upgrade_v1.25.0_audit_and_impl.md  38_upgrade_v1.26.0_audit_and_impl.md  39_upgrade_v1.27.0_audit_and_impl.md  40_upgrade_v1.28.0_file_upload_audit.md  41_upgrade_v1.29.0.md  42_upgrade_v1.30.0.md  43_upgrade_v1.31.0_cli_wiring_audit.md  44_upgrade_v1.32.0_route_add_agent.md  45_upgrade_v1.33.0_docx_pdf_native.md  REPOSITORY_AUDIT_2026-07-20.md  claude-api-gap-audit-v1.10.5.md  deployment.md  observability.md  zc-api-gap-audit-v1.10.5.md  zcoder_audit_prompts.md  zcoder_v1.33.0_audit_report.md
google/: __init__.py
k8s/: cilium-config.yaml  hpa_advanced.yaml  network-policies.yaml  vpa_advanced.yaml  wire-api-deployment.yaml
monitoring/: grafana-dashboards.yaml  prometheus-servicemonitor.yaml  prometheus.yml
scripts/: e2e_load_test.py  find_claude.py  native-deployment-preflight.sh  rebrand.py  resolve-ghcr-credentials.sh  setup-production-secrets.sh  sync-ai-provider-secrets.sh  zai-config-gen.py
tests/: conftest.py  test_app_cli.py  test_app_main.py  test_cache_security.py  test_chat_sessions_api.py  test_claude_admin_api.py  test_claude_agents_sdk.py  test_claude_cache.py  test_claude_code_context_editing.py  test_claude_code_exec.py  test_claude_code_slash_compact.py  test_claude_compliance_api.py  test_claude_fable5.py  test_claude_search.py  test_claude_skills_api.py  test_claude_structured.py  test_claude_thinking.py  test_claude_tools.py  test_claude_wif.py  test_claude_word_pdf.py  test_cli_wiring.py  test_cloudflare_access.py  test_cloudflare_contract.py  test_coder.py  test_config.py  test_config_gen.py  test_delta_sync_security.py  test_dependency_lock.py  test_encryption.py  test_enterprise_ai_api.py  test_enterprise_api_client.py  test_enterprise_api_security.py  test_enterprise_command_dispatch.py  test_enterprise_resource_api.py  test_enterprise_upload.py  test_github_actions_pins.py  test_grpc_security.py  test_http_client_security.py  test_idempotency_middleware.py  test_litellm_integration.py  (+35 more)
webapp/: README.md  __init__.py  requirements-web.txt
zai-configen/: Makefile  Makefile -  models.txt  test.txt
(+967 files in other folders)
