[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zcoder"
version = "1.33.0"
description = "AI Model Coder CLI — enterprise-grade edition"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Mirrors requirements.txt / requirements-dev.txt / webapp/requirements-web.txt.
# Previously this table didn't exist at all, so `pip install .` produced a
# package with no declared dependencies (see audit report, BUG-4). This
# fixes the metadata; it does not by itself make `python -m build` produce
# a wheel containing the actual source — see release.yml for why that's a
# separate, larger packaging-layout change.
dependencies = [
    "anthropic>=0.75.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
excel = ["pandas>=2.0.0", "openpyxl>=3.1.0"]          # --excel
pptx = ["python-pptx>=0.6.23"]                        # --pptx
tui = ["textual>=0.80.0"]                             # --tui
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "httpx>=0.27.0"]  # webapp/backend
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "build/*", "dist/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
