[metadata]
name = zcoder
version = 1.33.0
description = ZaiCoder CLI - enterprise-grade AI coding assistant
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ZaiCoder Team

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    anthropic>=0.75.0
    python-dotenv>=1.0.0
    fastapi>=0.115.0
    uvicorn[standard]>=0.30.0
    httpx>=0.27.0
    grpcio>=1.60.0
    grpcio-tools>=1.60.0
    protobuf>=4.25.0
    prometheus-client>=0.20.0
    opentelemetry-api>=1.20.0
    opentelemetry-sdk>=1.20.0
    redis>=5.0.0
    aiofiles>=24.0.0
    orjson>=3.10.0

[options.packages.find]
include = app*,config*,webapp*
exclude = tests*,docs*,k8s*

[options.entry_points]
console_scripts =
    zc = app.main:cli
    zcoder = app.main:cli

[tool:pytest]
testpaths = tests
addopts = -ra -q --strict-markers
asyncio_mode = strict

[mypy]
mypy_path = src
explicit_package_bases = True
namespace_packages = True
exclude = (?x)(^|/)(\.web-venv|google|app/proto)(/|$)
no_site_packages = True

[coverage:run]
source = .
omit = tests/*,build/*,dist/*,*/__pycache__/*

[coverage:report]
fail_under = 30
show_missing = true
