[metadata]
name = zcoder
version = 1.33.0
description = zcoder enterprise AI coding and API service
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ZaiCoder Team

[options]
packages =
    wire
    app
    app.api
    app.api.v1
    app.core
    app.grpc
    app.middleware
    app.models
    app.proto
    app.services
    app.services.delta
    webapp
    webapp.backend
package_dir =
    wire = src/wire
include_package_data = True
python_requires = >=3.11
install_requires =
    anthropic>=0.75.0
    python-dotenv>=1.0.0
    fastapi>=0.115.0
    uvicorn[standard]>=0.30.0
    httpx>=0.27.0
    litellm==1.94.0rc1
    aiohttp>=3.11.0
    python-multipart>=0.0.9
    aiofiles>=24.1.0
    grpcio>=1.60.0
    protobuf>=4.25.0
    blake3>=0.4.0
    bsdiff4>=1.2.0
    zstandard>=0.23.0
    redis>=5.2.0
    cryptography>=43.0.0
    PyJWT[crypto]>=2.9.0
    psutil>=6.0.0
    pydantic>=2.9.0
    PyYAML>=6.0.0

[options.entry_points]
console_scripts =
    zc = app.cli:cli
    zcoder = app.cli:cli
    zc-api = app.cli:cli
    zc-legacy = wire.main:main

[options.package_data]
webapp =
    frontend-dist/index.html
    frontend-dist/favicon.svg
    frontend-dist/assets/*

[tool:pytest]
testpaths = tests
addopts = -ra -q --strict-markers
asyncio_mode = strict

[mypy]
mypy_path = src
explicit_package_bases = True
namespace_packages = True
exclude = (?x)(^|/)(\.web-venv|google|app/proto)(/|$)
no_site_packages = True

[coverage:run]
source = .
omit = tests/*,build/*,dist/*,*/__pycache__/*,app/proto/*

[coverage:report]
fail_under = 30
show_missing = true
